updates and changes to css, cleaned up the files and added grids. Also added new contact and success pages.

--- a/style.css
+++ b/style.css
@@ -22,9 +22,13 @@ a {
   margin: 0 5px;
 }
 
+nav a:hover {
+  color: #a11010;
+}
+
 nav {
   box-shadow: 0 0 12px -2px black;
-  position: fixed;
+  position: static;
   left: 0;
   right: 0;
   align-items: center;
@@ -32,44 +36,49 @@ nav {
   color: aliceblue;
   display: flex;
   height: 80px;
-  padding: 10px;
-  display: flex;
+  padding: 50px;
   justify-content: space-between;
 }
 
+.active {
+  border-bottom: 1px solid #c0c0c0;
+}
+
 main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: start;
   min-height: 100vh;
   padding: 85px 24px 96px;
   box-shadow: 0 0 12px -2px black;
   color: aliceblue;
   font-family: "Open Sans", sans-serif;
-  font-size: 25px;
+  font-size: 1.5em;
 }
 
-footer {
-  background-color: #333333;
+main h2 {
+  font-weight: 500;
+  font-size: 2em;
+  margin: 0 0 .5em;
+  border-bottom: 2px solid #ccc;
+}
+
+main .quote {
+  margin-top: 1.5em;
+  font-family: "Brushed";
   color: aliceblue;
-  height: 70px;
-  padding: 10px;
-  position: fixed;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
+  font-size: 2em;
+  font-weight: 100;
+  text-shadow: 1px 1px 2px black;
   text-align: center;
-  box-shadow: 0 0 12px -2px black;
 }
 
-footer a {
-  margin: 0 25px;
-}
-
-footer .media-link {
-  height: 45px;
-}
-
-.active {
-  border-bottom: 1px solid #c0c0c0;
+#about-header.quote-two {
+  font-weight: 500;
+  font-size: 1.5em;
+  margin: 0 0 .5em;
+  text-align: center;
 }
 
 main > p > img {
@@ -80,51 +89,63 @@ main > p > img {
   margin: 10px 0 10px 10px;
 }
 
-.quote {
-  font-family: "Brushed",;
-  color: aliceblue;
-  font-size: 50px;
-  font-weight: 100;
-  text-shadow: 1px 1px 2px black;
-  text-align: center;
-  margin-top: 2em;
-}
-
 section {
-  border-top: 1px solid #bbb;
+  border-top: 2px solid #bbb;
   font-size: 16px;
 }
 
-.about-section:nth-of-type(2n) > img {
-  float: left;
-  margin: 0 24px 24px 0;
-}
-
-.about-section:nth-of-type(2n + 1) > img {
+.about-section > p > img {
+  width: 400px;
+  height: 325px;
+  border-radius: 50px;
   float: right;
-  margin: 0 24px 24px 24px;
+  margin: 10px 10px 10px 10px;
 }
 
-.about-section img {
-  height: 128px;
+.about-section:nth-of-type(2n) > p > img {
+  width: 400px;
+  height: 325px;
+  border-radius: 50px;
+  float: left;
+  margin: 10px 10px 10px 10px;
+}
+
+.about-section:nth-of-type(3n) > p > img {
+  width: 400px;
+  height: 325px;
+  border-radius: 50px;
+  float: right;
+  margin: 10px 10px 10px 10px;
 }
 
 #about-header {
   font-weight: 300;
   font-size: 2rem;
+  padding-bottom: 25px;
+  margin-top: .5em;
+}
+
+#project-container {
+  width: calc(100% - 4em);
+  background: #bcbcbc;
+  color: #222;
+  border-radius: 50px;
+  box-shadow: 0 3px 6px -2px #000000;
+  margin: 1em;
+  padding: 2em;
 }
 
 .project {
-  width: calc(100% - 20em);
+  width: calc(100% - 6em);
   background: #fafafa;
   color: #222;
   box-shadow: 0 3px 6px -2px #ccc;
-  margin: 2em;
+  margin: 2em auto;
   padding: 1em;
 }
 
 .project:nth-of-type(2n) img {
-  width: 240px;
+  width: 200px;
   margin-right: 1em;
   margin-bottom: 1em;
   float: left;
@@ -132,9 +153,9 @@ section {
 }
 
 .project:nth-of-type(2n + 1) img {
-  width: 240px;
+  width: 200px;
   margin-left: 1em;
-  margin-bottom: 1em;
+  margin-bottom: em;
   float: right;
   box-shadow: 0 3px 6px -2px #ccc;
 }
@@ -143,13 +164,49 @@ section {
   font-weight: 500;
   font-size: 2em;
   margin: 0 0 1em;
-  border-bottom: 2px solid #ccc;
+  border-bottom: 2px solid #000000;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  text-align: start;
 }
 
 #project-header {
-  font-weight: 100;
-  font-size: 2rem;
-  border-bottom: 1px solid #ccc;
+  font-weight: 500;
+  font-size: 2em;
+  margin: 0 0 .5em;
+  border-bottom: 2px solid #ccc;
+}
+
+main h5 {
+  font-weight: 500;
+  font-size: 2em;
+  margin: 0 0 .5em;
+  border-bottom: 2px solid #ccc;
+}
+
+form {
+  font-size: 25px;
+  max-width: 660px;
+  margin: auto;
+}
+
+input {
+  width: 100%;
+  height: 30px;
+  font-size: 18px;
+}
+
+textarea {
+  width: 100%;
+  font-size: 15px;
+}
+
+#submit {
+  font-size: 15px;
+  background-color: #fafafa;
+  border-radius: 5px;
+  box-shadow: 0 0 12px -2px black;
 }
 
 @media screen and (max-width: 625px) {
@@ -184,10 +241,6 @@ section {
     margin: unset;
     width: 100%;
     height: unset;
-  }
-
-  footer a {
-    margin: 0;
   }
 
   #form {
